fix the padding on small device

--- a/app/styles/form.css
+++ b/app/styles/form.css
@@ -83,7 +83,7 @@
 
 @media screen and (max-width: 617px) {
   .step-form{
-      padding: 0 20px !important;
+      padding: 0 30px !important;
   }
 }
   
