--- a/app/styles/stepthree.css
+++ b/app/styles/stepthree.css
@@ -1,38 +1,3 @@
-.step-form{
-    padding: 0px 60px !important;
-}
-
-.step-form h2{
-    font-size: 40px;
-    font-weight: 600;
-    line-height: 44px;
-    letter-spacing: -2px;
-    padding-bottom: 20px;
-    text-transform: uppercase;
-}
-
-.step-form h2 p{
-    display: inline;
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 22px;
-    letter-spacing: -2px;
-    color: #484E5A !important;
-}
-
-
-.step-form h2 span{
-    color: #38B64B;
-}
-
-.step-form p{
-    font-size: 16px;
-    font-weight: 300;
-    line-height: 24px;
-    color: #484E5A;
-}
-
-
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 .review-inline{
